<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/pref_location_title"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_defaultValue"
        android:inputType="text"
        android:singleLine="true" />


    <ListPreference
        android:key="@string/pref_temperature_key"
        android:title="@string/pref_temperature_title"
        android:dialogTitle="@string/pref_temperature_dialogTitle"
        android:entries="@array/pref_temperature_entries"
        android:entryValues="@array/pref_temperature_values"
        android:defaultValue="@string/pref_temperature_defaultValue"/>

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>